# PocAdk

./: .env.example  .gitignore  README.md  SIMPLE_README.md  main.py  pyproject.toml  requirements.txt  setup_vertex_ai.py  simple_main.py  test_api.py  test_basic_functionality.py  test_paisalo_rules.py  test_simple_credit.py  test_vertex_ai.py
api/: __init__.py  dependencies.py  routes.py
credit_assessment_agent/: __init__.py  agent.py
credit_assessment_agent/shared_libraries/: __init__.py  data_models.py  paisalo_rules.py  pdf_processor.py  utils.py  vertex_ai_client.py
credit_assessment_agent/sub_agents/: __init__.py
credit_assessment_agent/sub_agents/transaction_analyzer/: __init__.py  agent.py
credit_assessment_agent/sub_agents/transaction_analyzer/tools/: __init__.py  transaction_analysis_tools.py
sample_data/: credit_applications.json
simple_credit_agent/: __init__.py  agent.py  models.py  prompts.py  rules.py
simple_credit_agent/sub_agents/: __init__.py  decision_engine.py  risk_assessor.py
